--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -6,14 +6,14 @@
 
     <div [isAnimated]="true" [collapse]="isCollapsed" class="collapse navbar-collapse" id="navbarSupportedContent">
         <ul class="navbar-nav mr-auto">
-            <li class="nav-item " [routerLinkActiveOptions]="{ exact: true }" routerLinkActive="active">
-                <a class="nav-link" routerLink="">Tableau De Bord</a>
-            </li>
-            <li class="nav-item" routerLinkActive="active">
-                <a class="nav-link" routerLink="items">Produits Alimentaires</a>
-            </li>
         </ul>
         <ul class="navbar-nav navbar-right">
+          <li class="nav-item " [routerLinkActiveOptions]="{ exact: true }" routerLinkActive="active">
+            <a class="nav-link" routerLink="" routerLinkActive="active">Tableau De Bord</a>
+          </li>
+          <li class="nav-item" >
+            <a class="nav-link" routerLink="items" routerLinkActive="active">Produits Alimentaires</a>
+          </li>
             <li class="nav-item " [routerLinkActiveOptions]="{ exact: true }" routerLinkActive="active">
                 <a class="nav-link" type="button" (click)="logout()">Déconnexion</a>
             </li>
