--- a/src/app/order/order-form/order-form.component.html
+++ b/src/app/order/order-form/order-form.component.html
@@ -64,7 +64,7 @@
       <button type="button" *ngIf="edit" mat-button class="btn btn-danger ml-1" (click)="delete()">Delete</button>
       <mat-form-field appearance="fill"  style="width: 90px; margin-left: 10px;">
         <mat-label>AM/PM</mat-label>
-        <mat-select>
+        <mat-select formControlName="timeOfDay">
           <mat-option  [value]="'AM'">
             AM
           </mat-option>
@@ -75,7 +75,7 @@
       </mat-form-field>
       <mat-form-field appearance="fill"  style="width: 140px; margin-left: 10px;">
         <mat-label>Payé/Non Payé</mat-label>
-        <mat-select>
+        <mat-select formControlName="payed">
           <mat-option  [value]="true">
             Payé
           </mat-option>
@@ -88,6 +88,7 @@
       <mat-form-field  appearance="fill" style="margin-left: 10px; flex:1">
         <mat-label>Notes</mat-label>
         <textarea matInput
+                  formControlName="notes"
                   cdkTextareaAutosize
                   #autosize="cdkTextareaAutosize"
                   cdkAutosizeMinRows="1"
