--- a/src/app/dashboard/all-orders/all-orders.component.html
+++ b/src/app/dashboard/all-orders/all-orders.component.html
@@ -33,7 +33,7 @@
   </ng-container>
   <ng-container matColumnDef="details">
     <th mat-header-cell *matHeaderCellDef mat-sort-header class="no-print"> Détails </th>
-    <td class="no-print" mat-cell *matCellDef="let item"> <button (click)="openEditDialog(item.id)" class="btn btn-primary">Modifier</button> </td>
+    <td class="no-print" mat-cell *matCellDef="let item"> <button (click)="openEditDialog(item.id)" class="btn btn-info">Modifier</button> </td>
     <td mat-footer-cell *matFooterCellDef></td>
   </ng-container>
   <tr mat-header-row *matHeaderRowDef="columns"></tr>
