--- a/src/app/items/add-item/add-item.component.html
+++ b/src/app/items/add-item/add-item.component.html
@@ -38,5 +38,5 @@
         <input matInput  formControlName="price">
     </mat-form-field>
 
-    <button mat-button class="btn btn-primary" color="primary" type="submit" [disabled]="myForm.invalid">Ajouter Aliment</button>
+    <button mat-button class="btn btn-primary mt-2" color="primary" type="submit" [disabled]="myForm.invalid">Ajouter Aliment</button>
 </form>
