--- a/src/app/items/edit-item/edit-item.component.html
+++ b/src/app/items/edit-item/edit-item.component.html
@@ -38,6 +38,6 @@
     <input matInput  formControlName="price">
   </mat-form-field>
 
-    <button mat-button class="btn btn-primary" color="primary" type="submit" [disabled]="myForm.invalid">Enregistrer</button>
-    <button mat-button class="ml-2 btn btn-danger" color="primary" type="button" (click)="delete()">Supprimer</button>
+    <button mat-button class="btn btn-primary mt-2" color="primary" type="submit" [disabled]="myForm.invalid">Enregistrer</button>
+    <button mat-button class="ml-2 btn btn-danger mt-2" color="primary" type="button" (click)="delete()">Supprimer</button>
 </form>
