--- a/src/app/items/items.component.html
+++ b/src/app/items/items.component.html
@@ -5,7 +5,7 @@
     </div>
     <div class="row">
         <div class="col-sm mt-3">
-            <button (click)="openDialog()" class="btn btn-primary">Ajouter Un Aliment</button>
+            <button (click)="openDialog()" class=" btn-grad">Ajouter Un Aliment</button>
             <table mat-table [dataSource]="dataSource" matSort class="table-max mat-elevation-z8 mt-3 table-max">
                 <ng-container matColumnDef="name">
                     <th mat-header-cell *matHeaderCellDef mat-sort-header>Nom </th>
@@ -24,7 +24,7 @@
                 </ng-container>
                 <ng-container matColumnDef="edit">
                     <th mat-header-cell *matHeaderCellDef mat-sort-header> </th>
-                    <td mat-cell *matCellDef="let item"> <button class="btn btn-primary" (click)="editItemDialog(item)">Modifier</button> </td>
+                    <td mat-cell *matCellDef="let item"> <button class="btn btn-info" (click)="editItemDialog(item)">Modifier</button> </td>
                 </ng-container>
 
 
