--- a/src/app/items/items.component.html
+++ b/src/app/items/items.component.html
@@ -20,7 +20,7 @@
                 <!-- Count -->
                 <ng-container matColumnDef="price">
                     <th mat-header-cell *matHeaderCellDef mat-sort-header> prix </th>
-                    <td mat-cell *matCellDef="let item"> {{item.price |currency }} </td>
+                    <td mat-cell *matCellDef="let item"> ${{item.price |currency:'CAD':'':'':'fr' }} </td>
                 </ng-container>
                 <ng-container matColumnDef="edit">
                     <th mat-header-cell *matHeaderCellDef mat-sort-header> </th>
