--- a/src/app/app.component.scss
+++ b/src/app/app.component.scss
@@ -5,3 +5,7 @@
   border-bottom: 1px solid #e0e0e0;
   flex-wrap: nowrap;
 }
+#navbarSupportedContent{
+  text-align: right;
+  margin-right:10px;
+}
