fixed menu alignemnt

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,5 +1,5 @@
 <nav class="navbar navbar-expand-xl navbar-light bg-light">
-  <div style="display:flex;"><img src="assets/images/logofinal.png" style="height: 40px">
+  <div style="display:flex;align-items: center;"><img src="assets/images/logofinal.png" style="height: 40px">
 
   <app-dashboard-menu class="content-desktop" *ngIf="router.url == '/dashboard'"></app-dashboard-menu>
   </div>
