--- a/src/app/dashboard/dashboard-menu/dashboard-menu.component.html
+++ b/src/app/dashboard/dashboard-menu/dashboard-menu.component.html
@@ -1,4 +1,4 @@
-<div class="col-sm header-bar">
+<div class="col-sm header-bar" style="display: flex; align-items: center">
   <button (click)="openDialog()" class=" btn-grad v-top">Nouvel Ordre</button>
   <mat-form-field class="ml-2">
     <input matInput autocomplete="off" placeholder="Filtrer les éléments" (keyup)="updateSearch($event.target.value)">
