--- a/src/app/dashboard/all-orders/all-orders.component.html
+++ b/src/app/dashboard/all-orders/all-orders.component.html
@@ -21,15 +21,30 @@
     <td mat-cell *matCellDef="let item"> {{ orderSummary(item)}} </td>
     <td mat-footer-cell *matFooterCellDef></td>
   </ng-container>
+  <ng-container matColumnDef="notes">
+    <th mat-header-cell *matHeaderCellDef mat-sort-header> Notes </th>
+    <td  mat-cell *matCellDef="let item"> <span *ngIf="item.notes && item.notes.length <= 50">{{item.notes}}</span><span *ngIf="item.notes && item.notes.length > 50" matTooltip="{{item.notes}}" >{{truncateChar(item.notes)}}</span> </td>
+    <td mat-footer-cell *matFooterCellDef></td>
+  </ng-container>
   <ng-container matColumnDef="total">
     <th mat-header-cell *matHeaderCellDef mat-sort-header> Prix </th>
     <td mat-cell *matCellDef="let item"> ${{ item.total | currency:'CAD':'':'':'fr' }} </td>
     <td style="font-weight: bold" mat-footer-cell *matFooterCellDef> ${{totalCost | currency:'CAD':'':'':'fr' }} </td>
   </ng-container>
+  <ng-container matColumnDef="paid">
+    <th mat-header-cell *matHeaderCellDef mat-sort-header> Payé </th>
+    <td mat-cell *matCellDef="let item"> <span class="small-tag" *ngIf="item.payed">payé</span> </td>
+    <td mat-footer-cell *matFooterCellDef></td>
+  </ng-container>
   <ng-container matColumnDef="date" *ngIf="!forDate">
     <th mat-header-cell *matHeaderCellDef mat-sort-header> Date </th>
     <td mat-cell *matCellDef="let item"> {{ item.date.toDate() | date :'mediumDate'}} </td>
     <td mat-footer-cell *matFooterCellDef></td>
+  </ng-container>
+  <ng-container matColumnDef="timeOfDay">
+    <th mat-header-cell *matHeaderCellDef mat-sort-header> AM/PM </th>
+    <td mat-cell *matCellDef="let item"> {{item.timeOfDay}} </td>
+    <td mat-footer-cell *matFooterCellDef></td>timeOfDay
   </ng-container>
   <ng-container matColumnDef="details">
     <th mat-header-cell *matHeaderCellDef mat-sort-header class="no-print"> Détails </th>
