--- a/src/styles.scss
+++ b/src/styles.scss
@@ -104,3 +104,13 @@ h4{
   font-weight: 500!important;
 }
 
+.small-tag{
+  background: #72d661;
+  padding: 5px 7px;
+  color: white;
+  border-radius: 8px;
+  text-transform: uppercase;
+  letter-spacing: .8px;
+  font-weight: 500;
+  font-size: 12px;
+}
