removed gradient for button

--- a/src/app/dashboard/dashboard-menu/dashboard-menu.component.html
+++ b/src/app/dashboard/dashboard-menu/dashboard-menu.component.html
@@ -1,5 +1,5 @@
 <div class="col-sm header-bar" style="display: flex; align-items: center">
-  <button (click)="openDialog()" class=" btn-grad v-top">Nouvelle Commande</button>
+  <button (click)="openDialog()" class=" btn-blue v-top">Nouvelle Commande</button>
   <mat-form-field class="ml-2">
     <input matInput autocomplete="off" placeholder="Rechercher" (keyup)="updateSearch($event.target.value)">
   </mat-form-field>
