--- a/src/app/items/items.component.html
+++ b/src/app/items/items.component.html
@@ -5,7 +5,7 @@
     </div>
     <div class="row">
         <div class="col-sm mt-3">
-            <button (click)="openDialog()" class=" btn-grad">Ajouter un produit</button>
+            <button (click)="openDialog()" class=" btn-blue">Ajouter un produit</button>
             <table mat-table [dataSource]="dataSource" matSort class="table-max  mt-1 table-max">
                 <ng-container matColumnDef="name">
                     <th mat-header-cell *matHeaderCellDef mat-sort-header>Nom </th>
