--- a/src/app/login/login.component.html
+++ b/src/app/login/login.component.html
@@ -1,5 +1,5 @@
 
-<div class="container">
+<div class="container mt-4">
     <div class="row">
         <div class="col-xs-8 col-md-6 col-md-offset-1">
             <div *ngIf="errorMessage" class="alert alert-danger">
