--- a/src/app/register/register.component.html
+++ b/src/app/register/register.component.html
@@ -1,6 +1,6 @@
 
 <div class="container">
-    <div class="row">
+    <div class="row mt-4">
         <div class="col-xs-12 col-md-6 col-md-offset-3">
             <div *ngIf="errorMessage" class="alert alert-danger">
                 <p>{{errorMessage}}</p>
