--- a/src/app/login/login.component.html
+++ b/src/app/login/login.component.html
@@ -30,8 +30,8 @@
                     >
                 </div>
                 <div>
-                    <button class="btn btn-primary" type="submit" [disabled]="authForm.invalid">Login</button>
-                    <button class="btn btn-primary" type="button" (click)="signUp()" style="margin-left: 10px;">Sign Up</button>
+                    <button class="btn btn-primary" type="submit" [disabled]="authForm.invalid">Se connecter</button>
+                    <button class="btn btn-primary" type="button" (click)="signUp()" style="margin-left: 10px;">Créer un compte</button>
                 </div>
             </form>
         </div>
