--- a/src/app/order/order-form/order-form.component.html
+++ b/src/app/order/order-form/order-form.component.html
@@ -20,13 +20,8 @@
         <mat-datepicker #picker></mat-datepicker>
       </mat-form-field>
       <mat-form-field>
-        <input matInput placeholder="Rechercher" [ngModelOptions]="{standalone: true}" [(ngModel)]="searchText">
+        <input autocomplete="off" matInput placeholder="Rechercher" [ngModelOptions]="{standalone: true}" [(ngModel)]="searchText">
       </mat-form-field>
-      <!-- Don't think we need this field
-      <mat-form-field>
-          <input type="telephone" matInput placeholder="Numéro client" formControlName="client_number">
-      </mat-form-field>
-      -->
     </div>
   </div>
   <div class="row flex-row">
